static/css/containers.css
/* Fix placement of the date filter in horizontal view  */
@media (max-width: 767px) {

    ul.navbar-nav li.inline {
        float: left;
    }
    ul.navbar-nav li.last-inline + li {
        clear: both;
    }
    ul.navbar-nav li.inline a {
        padding-top: 15px;
        padding-bottom: 15px;
    }

}

/* Fix markers on Google Map tile layer */
.leaflet-map-pane {
    z-index: 2 !important;
}

.leaflet-google-layer {
    z-index: 1 !important;
}

